# clean_device

./: .gitignore  Dockerfile  Makefile  README.md  clean_bot_run.service  device_202504282234.sql  device_company_test.sql  device_test.sql  device_type_test.sql  fill_in_the_table.py  main.py  pyproject.toml  start.sh  stock_device_202504282233.sql
data_cache/: device.sql  device_type.sql  device_type_test.sql  stock_device.sql  stock_device_test.sql
src/: bot_api.py  data_handler.py  data_resolve_interface.py  database_interface.py  db_app.py  interface.py  message_handler.py  query_interface.py  query_scheme.py  run_bot.py  schema_for_validate.py  schema_for_validation.py  scheme_for_validation.py  secret.py  table.sql  utils.py
src/bot/: states.py
src/bot/handlers/: __init__.py  add_company_handler.py  add_device_handler.py  add_stock_device_handler.py  add_type_device_handler.py  get_stock_device_handler.py  lamp_handler.py  other_components_handler.py  start_handler.py
src/bot/keyboard/: keyboard_company.py  keyboard_device.py  keyboard_start.py
src/bot/middleware/: bot_message_descriptions.py
src/tests/: conftest.py  test_bot_api.py  test_bot_api_db.py  test_data_resolve_interface.py  test_database_interface.py  test_database_query_handler.py  test_interface.py  test_model.py  test_query_interface.py  test_query_schemas.py  test_schema.py  test_scheme.py  test_work_sqllite_db.py
