[project]
name = "clean-device"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
markers = [
    "api_bot: тесты api связи бота с дб",
    "query_table: тесты для запросов из таблиц",
    "database_interface: тесты для подключения к базе данных",
]

